--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 			
 					<table border="1" width="80%">
 						<tr>
-							<td>Mond el a gittnek,hogy ki vagy</td>
-							<td>git config --global user.name "Sam Smith" </br>
-								git config --global user.email sam@example.com</td>
+							<td>Mond el a gitnek,hogy ki vagy</td>
+							<td>git config --global user.name "Krausz Márton" </br>
+								git config --global user.email krauszmarcika@gmail.com</td>
 							
 						</tr>
 						<tr>
-							<td>Hozz létre ujj helyi repository-t</td>
+							<td>Hozz létre új helyi repository-t</td>
 							<td>git init</td>
 							
 						</tr>
