basic git commands git commit -m Hiperhivatkozások.html

--- a/Hiperhivatkozás.html
+++ b/Hiperhivatkozás.html
@@ -1,13 +1,17 @@
-<html> 
-	<head>
-	</head>
-	<body>
-		<h1>A világ 5 leggyorsabb vadászrepülője</h1>
+<!DOCTYPE html>
+<html lang="hu">
+<head>
+    <meta charset="UTF-8">
+    <title>A világ 5 leggyorsabb vadászrepülője	</title>
+    <link rel="stylesheet" href="style.css"/>
+    </head>
+    <body> 
+			<h1>A világ 5 leggyorsabb vadászrepülője</h1>
 			
 		<h2>5. Bell X-2 Starbuster</h2> <br>
 				<a href="https://hu.wikipedia.org/wiki/X%E2%80%932_Starbuster">X-2 Starbuster</a> <br>
-			<IMG SRC="https://honvedelem.hu/media/cache/width_1200_p/images/media/x5f21458438dff674840431.jpg.pagespeed.ic.5AivFbmv6H.webp" ALIGN="CENTER" WIDTH="1000" HEIGHT="80%"> </center>
-				<BR> Az X−2-es úgyszólván tiszavirág életű volt, hiszen csak 1955−56 között emelkedhetett a magasba.<br>
+				<IMG SRC="https://honvedelem.hu/media/cache/width_1200_p/images/media/x5f21458438dff674840431.jpg.pagespeed.ic.5AivFbmv6H.webp" ALIGN="CENTER" WIDTH="1000" HEIGHT="80%"> </center>
+					<BR> Az X−2-es úgyszólván tiszavirág életű volt, hiszen csak 1955−56 között emelkedhetett a magasba.<br>
 				Mindössze arra tervezték, hogy valós körülmények között tesztelhessék a repülőgépek képességeit 2 Mach feletti sebesség mellett.<br>
 				Ám a tervezők túlteljesítettek, így az X−2-es már csaknem átlépte a 3,2 Machot, azaz a 3900 km/h-t.
 		<h2>4. Mikojan MiG-25 Foxbat</h2>
@@ -36,5 +40,5 @@
 				<br>Elképesztő csúcssebességének hátránya, hogy szerkezetileg nehezen viseli az alacsony sebességen való repülést, 
 				<br>így például a felszállás pillanatait is. Éppen ezért a mindössze 15 méter hosszú „emberi rakétát" egy B−52-es bombázó gyomrába helyezték el, amely felvitte 14 000 méter magasba, 
 				<br>ahol mint egy egyszerű bombát, kieresztette.
-	</body>
+    </body>
 </html>
