--- a/Fohtml.html
+++ b/Fohtml.html
@@ -3,19 +3,22 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </head>
 <body>
 
 <div class="sidebar">
+    <a href="Fohtml.html" class="GFG"><p class="fooldal">Fő oldal</p></a> <br>
     <a href="masodikoldal.html" class="GFG"><p class="masodikoldal">Második oldal</p></a> <br>
     <a href="harmadikoldal.html" class="GFG"><p class="harmadikoldal">Harmadikoldal</p></a> <br>
     <a href="negyedikoldal.html" class="GFG"><p class="negyedikoldal">Negyedikoldal</p></a> <br>
     <a href="otodikoldal.html" class="GFG"><p class="otodikoldal">Ötödikoldal</p></a> <br>
 </div>
-
 <div class="content">
-  <h2>I.Hunyadi Mátyás külpolitikája és birodalomépítő tervei</h2>
-  <p class="szöveg">A mi feladatunk:Hunyadi I. Mátyás külpolitikája, birodalomépítő tervei
+  <h2 class="cim">I.Hunyadi Mátyás külpolitikája és birodalomépítő tervei</h2>
+  <p class="szöveg">
+    A mi feladatunk:Hunyadi I. Mátyás külpolitikája, birodalomépítő tervei
     https://hu.wikipedia.org/wiki/I._M%C3%A1ty%C3%A1s_magyar_kir%C3%A1ly 2021.11.17 10:00 :,
      Magyarország és Horvátország királya 1458-tól
     A kibontakozó cseh háború (1468–1479) során a magyar seregek sikereket értek el (Szilézia, Morvaország elfoglalása), ám a lengyel Jagelló-dinasztia is a cseh koronáért szállt harcba. 
@@ -40,9 +43,11 @@
     Mátyás a német-római császári korona elnyerésére törekedett
     
     Az uralkodó előbb a cseh korona megszerzéséért indított hadjáratokat egykori apósa ellen, majd a Habsburgok ellen fordult. A kibontakozó cseh háború (1468–1479) során a magyar seregek sikereket értek el (Szilézia, Morvaország elfoglalása), ám a lengyel Jagelló-dinasztia is a cseh koronáért szállt harcba. </p>
-  <p></p>
+  <div class="fooldalkep">
   <h3></h3>
 </div>
-
+<iframe width="800px" height="400px" 
+src="https://www.youtube.com/embed/kdkQvYe6eS4">
+</iframe>
 </body>
 </html>
