--- a/masodikoldal.html
+++ b/masodikoldal.html
@@ -2,11 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    ide fog kerülni a második oldal tartalma
+    <div class="sidebar">
+        <a href="Fohtml.html" class="GFG"><p class="fooldal">Fő oldal</p></a> <br>
+        <a href="masodikoldal.html" class="GFG"><p class="masodikoldal">Második oldal</p></a> <br>
+        <a href="harmadikoldal.html" class="GFG"><p class="harmadikoldal">Harmadikoldal</p></a> <br>
+        <a href="negyedikoldal.html" class="GFG"><p class="negyedikoldal">Negyedikoldal</p></a> <br>
+        <a href="otodikoldal.html" class="GFG"><p class="otodikoldal">Ötödikoldal</p></a> <br>
+    </div>
+    <h2>
+Fontos évszámok a korszakkal kapcsolatban
+</h2>
+<div class="content">
+<p class="szöveg_masodikoldal">
+Magyarország és Horvátország királya 1458-tól
+A kibontakozó cseh háború (1468–1479) során a magyar seregek sikereket értek el (Szilézia, Morvaország elfoglalása)<br />, ám a lengyel Jagelló-dinasztia is a cseh koronáért szállt harcba. <br />
+cseh király 1469-től
+Ausztria uralkodó főhercege 1486-tól haláláig
+Uralkodni 1458. január 24-től kezdett és 47 évesen 1490. április 6-ben halálakor ésr véget az uralkodása <br />
+Koronázására 1464-ben került sor március 29-én.
+</p>
+</div>
 </body>
 </html>
