--- a/otodikoldal.html
+++ b/otodikoldal.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     ide fog kerülni az ötödik oldal tartalma
+    <a href="Fohtml.html" class="GFG"><p class="fooldal">Fő oldal</p></a> <br>
+    <a href="masodikoldal.html" class="GFG"><p class="masodikoldal">Második oldal</p></a> <br>
+    <a href="harmadikoldal.html" class="GFG"><p class="harmadikoldal">Harmadikoldal</p></a> <br>
+    <a href="negyedikoldal.html" class="GFG"><p class="negyedikoldal">Negyedikoldal</p></a> <br>
+    <a href="otodikoldal.html" class="GFG"><p class="otodikoldal">Ötödikoldal</p></a> <br>
 </body>
 </html>
